# xfe-control-sim

./: .clang-format  .clang-tidy  .gitignore  .style.yapf  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  XFEInstaller.iss  iwyu_mappings.imp
.github/workflows/: cloud.yml
cmake/: dependencies.cmake  detect_ccache.cmake  ipo.cmake
cmake/modules/: FindGSL.cmake  Findjansson.cmake  Findlibmodbus.cmake  Findxflowutils.cmake
include/: CMakeLists.txt  bladed_interface.h  control_switch.h  flow_gen.h  make_stage.h  numerical_integrator.h  xfe_control_sim_common.h  xfe_control_sim_version.h  xflow_control_sim_version.h
misc/: README.md  clang_format_all.ps1  clang_format_all.py  clang_format_all.sh  clang_tidy_all.py  clang_tidy_all.sh  clone-repo.ps1  create_plot_viewer_executable.ps1  gui.py  install-cmake-msi.ps1  install-gsl.ps1  install-llvm-mingw.ps1  install-ninja-binary.ps1  install-python.ps1  install_commit_hooks.py  install_unix_dependencies.sh  launch_discon_test.sh  launch_gui.sh  launch_install_plot_gui.py  launch_install_plot_gui.sh  launch_sim_example_test.sh  launch_tests.py  launch_xfe_control_sim_example.sh  launch_xflow_control_sim_example.sh  plot_viewer.py  plot_viewer_help.md  pre-commit.py  run_discon_test.ps1  run_sim_example_test.ps1  run_xfe_control_sim.ps1  xflow_shared_functions.py
misc/pwsh/: clone-repo.ps1  install-clang-compiler.ps1  install-git.ps1  install-jansson-ninja.ps1  install-libmodbus.ps1  install-mingw64.ps1  plot_viewer_install_launch.ps1
sim_example/: .clang-format  .clang-tidy  CMakeLists.txt
sim_example/cmake/modules/: Findxfe-control-sim.cmake  Findxflow-control-sim.cmake
sim_example/config/: simple_ball_config.cmake  simple_ball_config.csv  simple_turbine_config.cmake  simple_turbine_config.csv
sim_example/include/: CMakeLists.txt  data_processing.h  discon.h  drivetrains.h  equation_of_motion.h  flow_sim_model.h  qblade_interface.h  turbine_controls.h
sim_example/log/: README.md
sim_example/misc/: clang_format_all.py  clang_tidy_all.py  launch_discon.sh  launch_tests.py  launch_xfe_control_sim.sh  launch_xflow_control_sim.sh  run_discon.ps1  run_xfe_control_sim.ps1  run_xflow_control_sim.ps1
sim_example/src/: data_processing.c  drivetrain.c  equation_of_motion.c  flow_sim_model.c  turbine_control.c
sim_example/src/qblade_interface/: CMakeLists.txt  discon.c  discon.in  qblade_control_switch.c  qblade_interface.c  test_discon.c
src/: CMakeLists.txt  control_switch.c  flow_gen.c  modbus_server.c  numerical_integrator.c  turbine_control_common.c  xfe_control_sim_common.c  xfe_control_sim_main.c  xfe_control_sim_version.in.c  xflow_control_sim_common.c  xflow_control_sim_main.c
